[project]
name = "bolt11"
version = "2.2.0"
requires-python = ">=3.10,<3.13"
description = "A library for encoding and decoding BOLT11 payment requests."
authors = [
    { name = "eillarra", email = "eneko@illarra.com" },
    { name = "dni", email = "dni@lnbits.com" },
    { name = "Alan Bits", email = "alan@lnbits.com" },
]
urls = { Repository = "https://github.com/lnbits/bolt11" }
readme = "README.md"
license = "MIT"
dependencies = [
    "click",
    "base58",
    "coincurve",
    "bech32",
    "bitstring",
]

[project.scripts]
bolt11 = "bolt11.cli:main"

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pyright",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bolt11"]

[tool.mypy]
ignore_missing_imports = "True"
files = "bolt11"


[tool.pytest.ini_options]
addopts = "-s --cov=bolt11 --cov-report=xml"
testpaths = [
  "tests"
]


[tool.pyright]
reportMissingImports = false
include = [
    "bolt11",
]


[tool.black]
line-length = 88

# previously experimental-string-processing = true
# this should autoformat string properly but does not work
preview = true


[tool.ruff]
# Same as Black. but black has a 10% overflow rule
line-length = 88

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# (`I`) means isorting
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
# target-version = "py38"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
